--- a/MMarket/css/Payment.css
+++ b/MMarket/css/Payment.css
@@ -48,7 +48,7 @@
 }
 
     .step_complete a.check-bc, .step_complete a.check-bc:hover, .afix-1, .afix-1:hover {
-        color: #eee;
+        color: black;
     }
 
 .step_line.step_complete {
