--- a/MMarket/css/Payment.css
+++ b/MMarket/css/Payment.css
@@ -434,5 +434,6 @@ hr {
     color: white;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:bold;
     padding-top: 1px;
 }
