--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster+Two" />
    
-    <title>MaritaMarket</title>
+    <title>Habibi Shop</title>
 
 </head>
 <body>
