--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -169,7 +169,7 @@
                                 <div class="footer-contact-icon">
                                     <i class="fa fa-envelope-o"></i>
                                 </div>
-                                <div class="footer-contact-text"><a href="mailto:info@al-basha.eu">info@al-basha.eu</a></div>
+                                <div class="footer-contact-text"><a href="mailto:info@al-basha.eu">info@habibi-orient.com</a></div>
                             </div>
                         </div>
                     </div>
