--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -4,8 +4,8 @@
 
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.2.1.slim.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
